--- a/.gitignore
+++ b/.gitignore
@@ -1,54 +1,18 @@
-############################
-# Node / React / Next.js
-############################
 node_modules/
 .next/
-out/
-dist/
-build/
 .turbo/
 .cache/
-
-############################
-# Environment variables
-############################
-.env
-.env.local
-.env.development
-.env.production
-.env.test
-.env.*
-
-############################
-# Python
-############################
-__pycache__/
-*.py[cod]
-*.pyo
-*.pyd
-*.egg-info/
-.eggs/
+dist/
+build/
+out/
 .venv/
 venv/
-ENV/
-env/
-
-############################
-# Databases
-############################
-*.sqlite3
-*.db
-orm.db
-
-############################
-# Logs
-############################
-*.log
-
-############################
-# OS / Editor
-############################
+__pycache__/
+*.pyc
+.env
+.env.local
+.env.*.local
 .DS_Store
-**/.DS_Store
-.idea/
 .vscode/
+.idea/
+public/
